# silica

./: .gitignore  CMakeLists.txt  README.md  cpp.sh  e.sh  init.sh  lib.cpp  macro.cpp  mkd.sh  mkdf.sh  run.sh  run.template  snippets.json  submission.template  task.template  template.cpp
.DS_Stalfheim/: ore
.DS_Stsilica/: ore
.gitalfheim/: ignore
.gitsilica/: ignore
CMakeListsilica/: s.txt
aizu/: 11_2_FIbonacciNumber.cpp  11_3_LCSubsequence.cpp  4_3_Queue.cpp  4_5_STLQueueExample.cpp  5_2_LinearSearch.cpp  6_3_KochCurve.cpp  9_2_BinarySearchTree.cpp
algorithm/: binarysearch.hpp  z.hpp
aoj/: 10_3_MaximumHeap.cpp  12_4_BreadthFirstSearch.cpp  3_5_StableSort.cpp  4_5_STLVectorExample.cpp  5_3_BinarySearch.cpp  5_5_1_IteratorSampleVector.cpp  5_5_2_LowerBound.cpp  9_3_BinarySearchTree2.cpp
bash/: clean.sh  mvf.sh
beginer/: ABC045.cpp  ABC045C.cpp  ABC051.cpp
codeforces/: 306a.cpp  331c1.cpp
debug/: debug.hpp
graph/: bellmanford.hpp  dijkstra.hpp  kruskal.hpp  lca.hpp  topological.hpp  warshallfloyd.hpp
libtest/: kruskal_test.hpp  warshallfloyd_test.hpp
macro_tsilica/: est.cpp
math/: combination.hpp  factor.hpp  finv.hpp  math.hpp  mint.hpp  permutation.hpp  prime.hpp  stirling.hpp
run.tsilica/: emplate
snippetsilica/: s.json  s.txt
src/: 4_3_Queue.cpp  5_2_LinearSearch.cpp  a
src++/: 12_2_Graph.cpp  8_3_BinaryTree.cpp  8_4_TreeWalk.cpp  9_4_BinarySearchTree3.cpp
string/: z.hpp
structure/: bit.hpp  fenwick.hpp  segtree.hpp  sparsetable.hpp  unionfind.hpp
tasks/: A500YenCoins.cpp  BCountABC.cpp  CCountOrder.cpp  DKnapsack1.cpp  cmd  (+14 more)
(+590 files in other folders)
